--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+/* @import '~@angular/material/prebuilt-themes/indigo-pink.css'; */
+html, body {
+	height: 100%;
+}
+
+body {
+	background: #78909C;
+	background: linear-gradient( white,#78909C);
+	background-repeat: no-repeat;
+    background-attachment: fixed;
+}
