--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <form class="login-card" [formGroup]="loginForm" (ngSubmit)="submit()" novalidate>
+  <form class="login-card" [formGroup]="loginForm" (ngSubmit)="login()" novalidate>
     <div class="login-title">
       Sign In
     </div>
@@ -13,9 +13,14 @@
       <mat-icon matSuffix class="icon" (click)="hide = !hide">{{hide ? 'visibility' : 'visibility_off'}}</mat-icon>
       <mat-error *ngIf="loginForm.get('password').invalid">Password can't be empty.</mat-error>
     </mat-form-field>
-
+    <mat-checkbox class="checkBox" color="primary" formControlName="remember">Remember me</mat-checkbox>
     <button mat-raised-button class="form-full-width" type="submit" [disabled]="!isValid()">SIGN IN</button>
   </form>
+  <div class="links">
+      <!-- [routerLink]="/forgotPassword" -->
+    <a  >Forgot password?</a>
+  </div>
+ 
 </div>
 
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
