--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -4,23 +4,23 @@
         Register
       </div>
       <mat-form-field class="form-full-width">
-        <input matInput type="email" id="email" formControlName="email" placeholder="Email">
-        <mat-error *ngIf="registerForm.get('email').invalid">{{emailErrorMessage()}}</mat-error>
+        <input matInput type="email" id="email" formControlName="email" placeholder="Email" required>
+        <mat-error *ngIf="email.invalid && (email.dirty || email.touched)">{{emailErrorMsg()}}</mat-error>
       </mat-form-field>
       <mat-form-field class="form-full-width">
-        <input matInput type="text" id="username" formControlName="username" placeholder="Username">
-        <mat-error *ngIf="registerForm.get('username').invalid">Username can't be empty.</mat-error>
+        <input matInput type="text" id="username" formControlName="username" placeholder="Username" required>
+        <mat-error *ngIf="username.invalid">Username can't be empty.</mat-error>
       </mat-form-field>
       <mat-form-field class="form-full-width">
-        <input matInput type="password" formControlName="password" placeholder="Password">
-        <mat-error *ngIf="registerForm.get('password').invalid">Password should contains at least 8 characters</mat-error>
+        <input matInput type="password" formControlName="password" placeholder="Password" required>
+        <mat-error *ngIf="password.invalid && (password.dirty || password.touched)">Password should contains at least 8 characters</mat-error>
       </mat-form-field>
       <mat-form-field class="form-full-width">
-        <input matInput type="password" formControlName="confirm" placeholder="Confirm Password">
-        <mat-error *ngIf="registerForm.hasError('mismatch', 'confirm')">Password doesn't match.</mat-error>
+        <input matInput type="password" formControlName="pwConfirm" placeholder="Confirm Password" required>
+        <mat-error *ngIf="pwConfirm.invalid && (pwConfirm.dirty || pwConfirm.touched)">{{pwComfirmErrorMsg()}}</mat-error>
       </mat-form-field>
 
-      <button mat-raised-button class="form-full-width" type="submit" [disabled]="!isValid()">SIGN UP</button>
+      <button mat-raised-button class="form-full-width" type="submit" [disabled]="registerForm.invalid">SIGN UP</button>
       <div class="signup-link">
           Already have an account? <a [routerLink]="['/login']">Sign In</a>
       </div>
