--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -13,7 +13,7 @@
       </mat-form-field>
       <mat-form-field class="form-full-width">
         <input matInput type="password" formControlName="password" placeholder="Password" required>
-        <mat-error *ngIf="password.invalid && (password.dirty || password.touched)">Password should contains at least 8 characters</mat-error>
+        <mat-error *ngIf="password.invalid && (password.dirty || password.touched)">Password should contain at least 8 characters</mat-error>
       </mat-form-field>
       <mat-form-field class="form-full-width">
         <input matInput type="password" formControlName="pwConfirm" placeholder="Confirm Password" required>
