--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -9,7 +9,7 @@
       </mat-form-field>
       <mat-form-field class="form-full-width">
         <input matInput type="text" id="username" formControlName="username" placeholder="Username" required>
-        <mat-error *ngIf="username.invalid">Username can't be empty.</mat-error>
+        <mat-error *ngIf="username.invalid && (username.dirty || username.touched)">{{usernameErrorMsg()}}</mat-error>
       </mat-form-field>
       <mat-form-field class="form-full-width">
         <input matInput type="password" formControlName="password" placeholder="Password" required>
