--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -11,7 +11,7 @@
     <mat-form-field class="form-full-width">
       <input matInput [type]="hide? 'password': 'text'" formControlName="password" placeholder="Password">
       <mat-icon matSuffix class="icon" (click)="hide = !hide">{{hide ? 'visibility' : 'visibility_off'}}</mat-icon>
-      <mat-error *ngIf="password.invalid">Password can't be empty.</mat-error>
+      <mat-error *ngIf="password.invalid">{{passwordErrorMsg()}}</mat-error>
     </mat-form-field>
     <div class="reset-link">
       <a href="/forgotPassword">Forgot password?</a>
